添加了常见登录异常

--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -1,3 +1,11 @@
+
+# 用户
 [users]
-zhangsan=z3z4z5z6
-lisi=l4l4l4l4
+zhangsan=z3z4z5z6,role2
+lisi=l4l4l4l4,role1
+
+
+# 角色
+[roles]
+role1=user:insert,user:select
+role2=user:delete
